Fix: Table design was broken in the Mobile View

--- a/assets/scss/front/course-spotlight/quiz.scss
+++ b/assets/scss/front/course-spotlight/quiz.scss
@@ -62,7 +62,7 @@
 		}
 	}
 	.tutor-quiz-wrap {
-		width: 920px;
+		width: 980px;
 		.quiz-meta-info {
 			.quiz-meta-info-left {
 				> * {
